# loan_approval_predictor

./: .gitignore  README.md  pyproject.toml
models/: loan_approval_models.joblib
notebooks/: loan_approval_system.ipynb
notebooks/models/: loan_approval_models.joblib
notebooks/reports/: metrics.csv
reports/: metrics.csv
scripts/: download_dataset.py  run_notebook.py
src/loan_approval_system/: __init__.py
