[project]
name = "loan-approval-system"
version = "0.1.0"
description = "Loan approval prediction with Logistic Regression and Random Forest."
readme = "README.md"
authors = [
    { name = "yhypno", email = "yashwantbora119@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kagglehub>=1.0.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.29.0",
]

[project.scripts]
loan-approval-system = "loan_approval_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
